--- a/example.env
+++ b/example.env
@@ -1,6 +1,6 @@
 # REQUIRED MODULE SETTINGS
 
-MODULE_NAME=boilerplate
+MODULE_NAME=zaikio-output
 MODULE_TYPE=Output
 
 # REQUIRED API SETTINGS
@@ -10,3 +10,8 @@ INGRESS_HOST=0.0.0.0
 INGRESS_PORT=80
 
 # YOU CAN ADD REMAINING MODULE SETTINGS BELOW
+
+PERSONAL_ACCESS_TOKEN=my-zaikio-token-12345
+ZAIKIO_SERVER=https://mc.sandbox.zaikio.com/api/v1
+ENDPOINT=POST /jobs
+OBJECT_ID=job-id-12345
